#add - bar animation

--- a/urban-notification-bar.css
+++ b/urban-notification-bar.css
@@ -1,8 +1,25 @@
 :host {
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 0;
+    right: 0;
+
+    padding: 12px;
+    border-bottom: 4px solid #ccc;
+    text-align: center;
+
+    transform: translate3d( 0, -100%, 0 );
 }
 
+:host(.show) {
+    transform: translate3d( 0, 0, 0 );
+    background: #fffefc;
+}
+
+:host(.transition) {
+    transition: transform .177s linear;
+}
 
 ::content .transparent,
 :host .transparent {
