--- a/components/urban-notification/urban-notification.html
+++ b/components/urban-notification/urban-notification.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../bezier-easing/bezier-easing.html">
 
 <!--
 Animating notification element.
@@ -18,8 +19,10 @@ Animating notification element.
 
         <link rel="stylesheet" href="urban-notification.css" />
 
+        <bezier-easing id="bezier" x1=".75" x2=".2" y1="1" y2=".76"></bezing-easing>
+
         <div id="container" class="transparent">
-            <content></content>
+            <content id="content"></content>
         </div>
 
     </template>
